smoke tests not handling windows-style data directory paths well

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.5.4
    • Affects Version/s: 2.5.4
    • Component/s: Testing Infrastructure
    • None
    • Environment:
      Windows
    • Windows
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      2 issues:

      1) MongoRunner.toRealPath() is returning an invalid path under Windows because it is assuming all absolute filesystem paths start with forward slash '/'. This is not true under Windows where an absolute path could start with backslash '\' or drive letter.

      2) A number of tests in disk and tool test suites are doing comparisons on the full path of files returned from listFiles(). listFiles() unfortunately converts all native path separators to a generic forward slash which makes comparing with Windows-style paths inconvenient.

      Resolution:

      1) MongoRunner.toRealPath() now recognizes Windows drive letters and backslashes at the beginning of any paths it is given.
      2) listFiles() now returns an additional field baseName which allows tests to check filenames without being affected by the normalization behavior.

      See http://mci.10gen.com/ui/build/mongodb_mongo_master_windows_64_97c3a3d2b487e9376d484d33ede2895e379a3033_13_10_29_18_31_29

      Tests are failing across all windows-64 buildvariants

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Adinoyi Omuya (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: