SERVER-11462 use base name in tests where verifying filenames. also added base name to listFiles() result