jstests/disk/quota.js
@@ -16,26 +16,26 @@ while( !db.getLastError() ) {
 }
 printjson( db.getLastError() );
 
-dotTwoDataFile = dbpath + "/" + baseName + ".2";
+dotTwoDataFile = baseName + ".2";
 files = listFiles( dbpath );
 for( i in files ) {
     // Since only one data file is allowed, a .0 file is expected and a .1 file may be preallocated (SERVER-3410) but no .2 file is expected.
-	assert.neq( dotTwoDataFile, files[ i ].name );
+    assert.neq( dotTwoDataFile, files[ i ].baseName );
 }
 
-dotTwoDataFile = dbpath + "/" + "local" + ".2";
+dotTwoDataFile = "local" + ".2";
 // Check that quota does not apply to local db, and a .2 file can be created.
 l = m.getDB( "local" )[ baseName ];
 for( i = 0; i < 10000; ++i ) {
     l.save( {b:big} );
     assert( !db.getLastError() );
-	dotTwoFound = false;
+    dotTwoFound = false;
     if ( i % 100 != 0 ) {
         continue;
     }
     files = listFiles( dbpath );
     for( f in files ) {
-     	if ( files[ f ].name == dotTwoDataFile ) {
+     	if ( files[ f ].baseName == dotTwoDataFile ) {
          	dotTwoFound = true;
         }
     }
