jstests/tool/dumprestore_repair.js
@@ -38,9 +38,9 @@ normalFiles = listFiles( normalDumpPath + '/'  + t.baseName )
 
 // filter out the metadata.json file
 normalFiles = normalFiles.filter( function(x) { if ( x.name.match( /bson$/ ) ) return x; } )
-assert.eq( normalFiles[0].name, normalDumpPath + "/" + t.baseName + "/foo.bson", "unexpected file name")
+assert.eq( normalFiles[0].baseName, "foo.bson", "unexpected file name")
 repairFiles = listFiles( repairDumpPath + '/'  + t.baseName )
-assert.eq( repairFiles[0].name, repairDumpPath + "/" + t.baseName + "/foo.bson", "unexpected file name")
+assert.eq( repairFiles[0].baseName, "foo.bson", "unexpected file name")
 
 // the --repair bson file should be exactly twice the size of the normal dump file
 assert.eq( normalFiles[0].size * 2, repairFiles[0].size );
